--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,10 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
+body {
+  font-size: 1.4rem;
+}
+
 h1,
 h2,
 h3,
@@ -20,6 +24,10 @@ p,
 ul {
   margin: 0;
   padding: 0;
+}
+
+ul {
+  list-style: none;
 }
 
 p {
